--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "reps-js",
   "private": false,
-  "version": "1.0.0",
+  "version": "2.0.0",
   "description": "A web app for tracking workouts, reps, weights etc",
   "keywords": [],
   "dependencies": {
     "backbone": "^1.3.2",
     "backbone.babysitter": "^0.1.11",
     "backbone.localstorage": "^1.1.16",
-    "backbone.marionette": "git+https://github.com/marionettejs/backbone.marionette.git#v3.0.0-pre.2",
+    "backbone.marionette": "git+https://github.com/marionettejs/backbone.marionette.git#v3.0.0-pre.4",
     "backbone.paginator": "^2.0.5",
     "backbone.radio": "^1.0.4",
     "backbone.syphon": "^0.6.3",
@@ -23,14 +23,15 @@
     "moment": "^2.11.2",
     "pg": "^4.4.3",
     "rollbar": "^0.6.0",
-    "sequelize": "^3.17.1",
-    "sequelize-cli": "^2.3.0",
+    "sequelize": "^3.20.0",
+    "sequelize-cli": "^2.3.1",
     "underscore": "^1.8.3",
     "underscore-template-loader": "^0.6.0",
     "validate.js": "^0.9.0",
     "validator": "^4.5.0",
     "webpack": "^1.12.13",
-    "window-or-global": "^1.0.1"
+    "window-or-global": "^1.0.1",
+    "snyk": "^1.16.0"
   },
   "scripts": {
     "debug": "node debug app.js",
@@ -46,9 +47,11 @@
     "test:server": "lab -I window,localStorage,location,__core-js_shared__ -e $NODE_ENV test/api/*",
     "test:client": "karma start --single-run",
     "test:client:ci": "karma start --single-run --reporters junit",
-    "test": "npm run test:server",
+    "test": "npm run test:server && snyk test",
     "createdb": "sudo -u postgres createuser -PRd workouts &&sudo -u postgres createdb -O workouts -T template0 -E UTF8 workouts",
-    "lint": "eslint app api models test"
+    "lint": "eslint app api models test",
+    "snyk-protect": "snyk protect",
+    "prepublish": "npm run snyk-protect"
   },
   "main": "app.js",
   "repository": {
@@ -82,5 +85,6 @@
     "sequelize-fixtures": "^0.4.8",
     "shot": "^3.0.0",
     "sinon": "^1.17.3"
-  }
+  },
+  "snyk": true
 }
